package enums;

public enum TipoOrdem {
    VENDA,
    COMPRA;
}
