@startuml
skinparam classAttributeIconSize 0

package enums {
  enum TipoOrdem {
    VENDA
    COMPRA
  }
}

package models {
  class Dinheiro {
    -quantia: BigDecimal
    +getQuantia(): BigDecimal
  }

  interface ObservadorAcao {
    +notificarAlteracao(acao: Acao, valorAnterior: Dinheiro, novoValor: Dinheiro): void
  }

  class Investidor {
    -nome: String
    -ordens: List<Ordem>
    -notificacoesRecebidas: List<String>
    +registrarOrdem(acao: Acao, tipoOrdem: TipoOrdem, valor: Dinheiro): boolean
    +registrarEmAcao(acao: Acao): void
    +notificarAlteracao(acao: Acao, valorAnterior: Dinheiro, novoValor: Dinheiro): void
  }

  class Ordem {
    -investidor: Investidor
    -tipoOrdem: TipoOrdem
    -valor: Dinheiro
    +tiposSaoOpostos(outraOrdem: Ordem): boolean
    +possuiMesmoValor(outroValor: Dinheiro): boolean
  }

  class Acao {
    -nome: String
    -valor: Dinheiro
    -ordens: List<Ordem>
    -observadores: List<ObservadorAcao>
    +registrarOrdem(ordem: Ordem): boolean
    +registrarObservador(observador: ObservadorAcao): void
    +removerObservador(observador: ObservadorAcao): void
  }
}

Investidor ..|> ObservadorAcao
Acao "1" o-- "*" Ordem
Acao "1" o-- "*" ObservadorAcao
Ordem "*" --> "1" Investidor
Ordem "*" --> "1" TipoOrdem
Ordem "*" --> "1" Dinheiro
Acao "1" --> "1" Dinheiro
@enduml
